# c-programming-fundamentals

./: CMakeLists.txt  LICENSE.md  README.md
exercises/: CMakeLists.txt
exercises/1-basics/: CMakeLists.txt  ex1_02.c  ex1_03.c  ex1_04.c  ex1_06.h  ex1_07.c  ex1_07.h  ex1_08.h  ex1_09.h  ex1_10.c  ex1_11.c  ex1_12.h  ex1_13.h  ex1_14.h  readme.md
exercises/2-memory/: ex2_1.h  ex2_2.h  readme.md
exercises/3-IO/: README.md
tests/: CMakeLists.txt
tests/1-basics/: 1_12.cpp  1_13.cpp  1_14.cpp  1_5.cpp  1_6.cpp  1_7.cpp  1_8.cpp  1_9.cpp  CMakeLists.txt
tests/2-memory/: 2_1.cpp  2_2.cpp  CMakeLists.txt
